08. 레포지토리 조회 화면 구현하기 (1)

--- a/app/src/main/res/layout/activity_repo.xml
+++ b/app/src/main/res/layout/activity_repo.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".RepoActivity">
 
+    <TextView
+        android:id="@+id/username_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:textColor="@color/black"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Bullets-jyr" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/repo_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/username_text_view"
+        tools:listitem="@layout/item_repo" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
